# scrape-up

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Football site webiste table scrap  LICENSE  Makefile  README.md  SECURITY.md  contribution.md  dev-documentation.md  documentation.md  index.html  main.py  mkdocs.yml  project_setup.sh  requirements.txt  sample.py  setup.cfg
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  custom.md  documentationupdate.yaml  featurerequest.yaml
.github/PULL_REQUEST_TEMPLATE/: custom.md  pull_request_template.md
.github/workflows/: auto-comments.yml  greetings.yaml  lint.yml  linting.yml  pr_merged.yml
css/: style.css
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  home.md  index.md  installation.md
docs/modules/: Finance.md  HackerEarth.md  Hackernews.md  Internshala.md  Twitter.md  academia.md  amazon.md  ask-ubuntu.md  bbc.md  chromewebstore.md  codechef.md  coinmarketcap.md  coursera.md  covid-19.md  crickbuzz.md  devpost.md  dribbble.md  eazydinner.md  ebay.md  espn.md  flexjobs.md  flipkart.md  flipkartclothing.md  flipkartlaptop.md  flyrobu.md  github.md  githubedu.md  gitlab.md  googlenews.md  hackerrank.md  hashnode.md  healthgrade.md  iccranking.md  imdb-actor.md  imdb-boxoffice.md  imdb-celeb.md  imdb-indian.md  imdb-movies.md  imdb.md  instagram.md  (+15 more)
docs/uses/: gitlab.md  luma.md  usage.md
football_scraping/: understat.com.csv  web-scraping-football-statistics-2014-now.py
gssoc159/: issue159_.py
issue#159/: git_scraper.py
issue159/: git_scraper.py
test/: GithubTest.py
(+409 files in other folders)
