[metadata]
name = scrape_up
version = 0.0.6
author = Clueless Community
author_email = official.cluelesscommunity@gmail.com
description = A web-scraping-based python package that enables you to scrape data from various platforms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Clueless-Community/scrape-up
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    bs4
    requests