[metadata]
name = scrape_up
version = 1.1.5
author = Clueless Community
author_email = official.cluelesscommunity@gmail.com
description = A web-scraping-based python package that enables you to scrape data from various platforms.
long_description = file: documentation.md
long_description_content_type = text/markdown
url = https://github.com/Clueless-Community/scrape-up
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    bs4
    requests
    requests-html
    beautifulsoup4

[options.packages.find]
where = src